--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,12 @@
 version: 0.2
 
 phases:
+  install:
+    runtime-versions:
+      python: 3.11
+    commands:
+      - pip install -r api/requirements.txt
+
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
@@ -27,8 +33,6 @@ phases:
 artifacts:
   files:
     - imageDefinitions.json
-    - appspec.yaml
-    - taskdef.json
   discard-paths: yes
 
 cache:
