--- a/compose.yaml
+++ b/compose.yaml
@@ -5,3 +5,8 @@ services:
       dockerfile: docker/api/Dockerfile
     ports:
       - 8080:8080
+    volumes:
+      - ~/.aws:/root/.aws:ro
+    environment:
+      - AWS_DEFAULT_REGION=us-west-2
+      - AWS_PROFILE=default
