--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -1,5 +1,5 @@
 # set up the container.
-FROM python:3.12-slim
+FROM public.ecr.aws/docker/library/python:3.12-slim
 
 # set the working dir.
 WORKDIR /api
