--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
       - docker push ${REPOSITORY_URI}:${IMAGE_TAG}
       - docker push ${REPOSITORY_URI}:latest
       - echo Writing image definitions file...
-      - echo "[{\"name\":\"ApiContainer\",\"imageUri\":\"${REPOSITORY_URI}:${IMAGE_TAG}\"},{\"name\":\"ApiContainer\",\"imageUri\":\"${REPOSITORY_URI}:latest\"}]" > imageDefinitions.json
+      - echo '[{"name":"ApiContainer","imageUri":"'${REPOSITORY_URI}:${IMAGE_TAG}'"}]' > imageDefinitions.json
 
 artifacts:
   files:
