buildspec.ymlの修正: imageDefinitions.jsonのパスを簡素化し、アーティファクトの設定を更新

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,13 +22,13 @@ phases:
       - docker push ${REPOSITORY_URI}:${IMAGE_TAG}
       - docker push ${REPOSITORY_URI}:latest
       - echo Writing image definitions file...
-      - echo "[{\"name\":\"ApiContainer\",\"imageUri\":\"${REPOSITORY_URI}:${IMAGE_TAG}\"}]" > ./imageDefinitions.json
-      - cat ./imageDefinitions.json
+      - echo "[{\"name\":\"ApiContainer\",\"imageUri\":\"${REPOSITORY_URI}:${IMAGE_TAG}\"}]" > imageDefinitions.json
+      - cat imageDefinitions.json
 
 artifacts:
+  base-directory: .
   files:
-    - ./imageDefinitions.json
-  discard-paths: yes
+    - imageDefinitions.json
 
 cache:
   paths:
